--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laracasts/utilities": "^3.0",
         "laravel-frontend-presets/argon": "^1.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.5",
+        "patroklo/improved-links": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
