--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,14 @@
         "php": "^7.1.3",
         "consoletvs/charts": "6.*",
         "fideloper/proxy": "^4.0",
+        "geoip2/geoip2": "~2.0",
         "laracasts/utilities": "^3.0",
         "laravel-frontend-presets/argon": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.5",
         "patroklo/improved-links": "^1.1",
+        "pragmarx/tracker": "^3.3",
         "uxweb/sweet-alert": "^2.0"
     },
     "require-dev": {
