--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.5",
         "patroklo/improved-links": "^1.1",
+        "renatomarinho/laravel-page-speed": "^1.8",
         "tzsk/payu": "^2.0",
         "uxweb/sweet-alert": "^2.0"
     },
